--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@ Released under the MIT license: http://jsbin.mit-license.org
             color: #6c757d;
             font-style: italic;
         }
+        img { width : 100%;}
     </style>
 </head>
 <body>
