--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Released under the MIT license: http://jsbin.mit-license.org
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>홍길동's Recipe Book</title>
+    <title>홍길동's 라면 Recipe Book</title>
     <style>
         body {
             font-family: Arial, sans-serif;
